[package]
name = "mednat"
version = "0.1.0"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For protocol ez
deku = "0.12.5"
# For getting bluetooth devices
blurz = "0.4.0"
# For connecting to raw bluetooth socket
libbluetooth = "0.1.0"
libc = "0.2.80"
# For generic numbers
num-traits = "0.2.14"
